--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,7 @@ install:
   - cmd: sc config wuauserv start= auto
   - cmd: net start wuauserv
   - ps: new-item c:\composer -itemtype directory
+  - ps: $Env:Path = $Env:Path + ";C:\tools\php73";
   - cmd: cd /d C:\composer
   - cmd: php -r "readfile('http://getcomposer.org/installer');" | php
   - ps: php C:\composer\composer.phar ' + $([char]37) + '*' | Out-File C:\composer\composer.bat -Encoding ASCII
