--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,9 @@ install:
   - cmd: net start wuauserv
   - ps: new-item c:\composer -itemtype directory
   - ps: $Env:Path = $Env:Path + ";C:\tools\php73";
+  - ps: Add-Content C:\tools\php73\php.ini "extension=php_openssl.dll `n"
+  - ps: Add-Content C:\tools\php73\php.ini "extension=php_mbstring.dll `n"
+  - ps: Add-Content C:\tools\php73\php.ini "extension=php_curl.dll `n"
   - cmd: cd /d C:\composer
   - cmd: php -r "readfile('http://getcomposer.org/installer');" | php
   - ps: php C:\composer\composer.phar ' + $([char]37) + '*' | Out-File C:\composer\composer.bat -Encoding ASCII
