--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,11 +23,11 @@ install:
       New-Item -ItemType directory -Force -Path $DESTINATION
       (new-object -com shell.application).namespace($DESTINATION).CopyHere((new-object -com shell.application).namespace($ZipPath).Items(),16)
       Remove-Item $ZipPath
-  - ps: $Env:Path = $Env:Path + ";C:\Program Files\OpenSSL";
+  - ps: $Env:Path = "C:\Program Files\OpenSSL;" + $Env:Path;
   - cmd: sc config wuauserv start= auto
   - cmd: net start wuauserv
   - ps: new-item c:\composer -itemtype directory
-  - ps: $Env:Path = $Env:Path + ";C:\tools\php73";
+  - ps: $Env:Path = "C:\tools\php73;" + $Env:Path;
   - ps: Add-Content C:\tools\php73\php.ini "extension=php_openssl `n"
   - ps: Add-Content C:\tools\php73\php.ini "extension=php_mbstring `n"
   - ps: Add-Content C:\tools\php73\php.ini "extension=php_curl `n"
