--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ hosts:
 image:
   - Visual Studio 2017
 install:
+  - ps: $Env:APPVEYOR_REPO_COMMIT_MESSAGE_FULL = "$env:APPVEYOR_REPO_COMMIT_MESSAGE $env:APPVEYOR_REPO_COMMIT_MESSAGE_EXTENDED".TrimEnd();
   - cmd: net start MSSQL$SQL2014
   - ps: Set-Service 'SQLAgent$SQL2014' -StartupType Manual
   - ps: Start-Service W3SVC
@@ -32,6 +33,10 @@ install:
   - ps: Add-Content C:\tools\php73\php.ini "extension=php_mbstring `n"
   - ps: Add-Content C:\tools\php73\php.ini "extension=php_curl `n"
   - cmd: cd /d C:\composer
+  - ps: |
+      If ($Env:APPVEYOR_REPO_COMMIT_MESSAGE_FULL -imatch 'rdpcomposer') {
+        $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+      }
   - cmd: php -r "readfile('http://getcomposer.org/installer');" | php
   - ps: php C:\composer\composer.phar ' + $([char]37) + '*' | Out-File C:\composer\composer.bat -Encoding ASCII
   - cmd: SET PATH=C:\composer;%PATH%
