--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,8 +38,7 @@ install:
       If ($Env:APPVEYOR_REPO_COMMIT_MESSAGE_FULL -imatch 'rdpcomposer') {
         $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
       }
-  - cmd: php -r "readfile('http://getcomposer.org/installer');" | php
-  - ps: php C:\composer\composer.phar ' + $([char]37) + '*' | Out-File C:\composer\composer.bat -Encoding ASCII
+  - cmd: choco install composer -y --no-progress
   - cmd: SET PATH=C:\composer;%PATH%
   - ps: composer global require hirak/prestissimo
   - cmd: IF NOT EXIST C:\projects\drupal-project composer create-project -n drupal-composer/drupal-project:8.x-dev
