--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,6 +39,7 @@ install:
         $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
       }
   - cmd: choco install composer -y --no-progress
+  - ps: refreshenv
   - cmd: SET PATH=C:\composer;%PATH%
   - ps: composer global require hirak/prestissimo
   - cmd: IF NOT EXIST C:\projects\drupal-project composer create-project -n drupal-composer/drupal-project:8.x-dev
