--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,7 +40,7 @@ install:
       If ($Env:APPVEYOR_REPO_COMMIT_MESSAGE_FULL -imatch 'rdpcomposer') {
         $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
       }
-  - cmd: SET PATH=C:\composer;%PATH%
+  - cmd: SET PATH=C:\ProgramData\ComposerSetup\bin;%PATH%
   - ps: composer global require hirak/prestissimo
   - cmd: IF NOT EXIST C:\projects\drupal-project composer create-project -n drupal-composer/drupal-project:8.x-dev
   - cmd: cd /d C:\projects\drupal-project
