--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,13 +10,14 @@ image:
   - Visual Studio 2017
 install:
   - ps: $Env:APPVEYOR_REPO_COMMIT_MESSAGE_FULL = "$env:APPVEYOR_REPO_COMMIT_MESSAGE $env:APPVEYOR_REPO_COMMIT_MESSAGE_EXTENDED".TrimEnd();
+  - cmd: mkdir c:\testlogs
   - cmd: net start MSSQL$SQL2014
   - ps: Set-Service 'SQLAgent$SQL2014' -StartupType Manual
   - ps: Start-Service W3SVC
-  - ps: choco install php -y --no-progress
-  - ps: choco install urlrewrite -y --no-progress
-  - ps: choco install OpenSSL.Light -y --no-progress
-  - ps: |
+  - ps: choco install php -y --no-progress 2>&1 > C:\TestLogs\choco_install_php.txt
+  - ps: choco install urlrewrite -y --no-progress 2>&1 > C:\TestLogs\choco_install_urlrewrite.txt
+  - ps: choco install OpenSSL.Light -y --no-progress 2>&1 > C:\TestLogs\choco_install_openssl.txt
+  - ps: | 
       $WorkingDir = Convert-Path .
       $ZipPath = Join-Path $WorkingDir '\chef_cmdlet.zip'
       (New-Object Net.WebClient).DownloadFile('https://ci.appveyor.com/api/projects/David19767/iischef/artifacts/iischef.cmdlet.zip?branch=1.x', $ZipPath)
@@ -27,6 +28,7 @@ install:
   - ps: $Env:Path = "C:\Program Files\OpenSSL;" + $Env:Path;
   - cmd: sc config wuauserv start= auto
   - cmd: net start wuauserv
+  - ps: (New-Object Net.WebClient).DownloadFile('http://curl.haxx.se/ca/cacert.pe', 'C:\tools\php73\cacert.pem')
   - ps: new-item c:\composer -itemtype directory
   - ps: $Env:Path = "C:\tools\php73;" + $Env:Path;
   - ps: Add-Content C:\tools\php73\php.ini "extension_dir=ext `n"
@@ -34,6 +36,8 @@ install:
   - ps: Add-Content C:\tools\php73\php.ini "extension=php_mbstring `n"
   - ps: Add-Content C:\tools\php73\php.ini "extension=php_curl `n"
   - ps: Add-Content C:\tools\php73\php.ini "extension=php_gd2.dll `n"
+  - ps: Add-Content C:\tools\php73\php.ini "curl.cainfo=C:\tools\php73\cacert.pem `n"
+  - ps: Add-Content C:\tools\php73\php.ini "openssl.cafile=C:\tools\php73\cacert.pem `n"
   - cmd: cd /d C:\composer
   - cmd: choco install composer -y --no-progress
   - ps: refreshenv
