--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,10 +8,15 @@ hosts:
   www.mydrupalsite.com: 127.0.0.1
 image:
   - Visual Studio 2019
+environment:
+  GITLABUSERNAME:
+    secure: N0zbef6BtZd0jLNUUub7Dg==
+  GITLABPASSWORD:
+    secure: DwrgA4XLxZEcUXSZnnsAJg==
 install:
   - ps: $Env:APPVEYOR_REPO_COMMIT_MESSAGE_FULL = "$env:APPVEYOR_REPO_COMMIT_MESSAGE $env:APPVEYOR_REPO_COMMIT_MESSAGE_EXTENDED".TrimEnd();
   - cmd: mkdir c:\testlogs
-  - cmd: net start MSSQL$SQL2017
+  - cmd: net start MSSQL$SQL2017 | out-null
   - ps: Set-Service 'SQLAgent$SQL2017' -StartupType Manual | out-null
   - ps: Start-Service W3SVC | out-null
   - ps: choco install php -y --no-progress 2>&1 > C:\TestLogs\choco_install_php.txt
