--- a/appveyor.yml
+++ b/appveyor.yml
@@ -62,7 +62,8 @@ install:
   - cmd: composer config repositories.1 git https://%GITLABUSERNAME%:%GITLABPASSWORD%@gitlab.com/david-garcia-garcia/mssql.git
   - cmd: composer require david/mssql
   - ps: |
-      "php %cd%\vendor\drupal\console\bin\drupal " + $([char]37) + "*" | Out-File %cd%/web/drupal.bat -Encoding ASCII
+      $cwd = (Get-Location).Path;
+      "php $cwd\vendor\drupal\console\bin\drupal " + $([char]37) + "*" | Out-File $cwd/web/drupal.bat -Encoding ASCII
   - cmd: cd /d C:\projects\drupal-project\web
   - cmd: drupal about
   - cmd: drupal site:install standard --langcode="en" --db-type="sqlsrv" --db-host="localhost\SQL2017" --db-name="mydrupalsite" --db-user="sa" --db-pass="Password12!" --db-port="1433" --site-name="SQL Server Drupal Site" --site-mail="admin@example.com" --account-name="admin" --account-mail="admin@example.com" --account-pass="admin" --no-interaction
