--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,7 +66,9 @@ install:
       "php $cwd\vendor\drupal\console\bin\drupal " + $([char]37) + "*" | Out-File $cwd/web/drupal.bat -Encoding ASCII
   - cmd: cd /d C:\projects\drupal-project\web
   - cmd: xcopy "%APPVEYOR_BUILD_FOLDER%\chef" "C:\projects\drupal-project\chef" /r /s /i
+  - ps: Invoke-ChefSelfInstall
   - ps: Invoke-ChefAppDeployPath "C:\projects\drupal-project" drupal -Install
+  - ps: $site = Invoke-ChefAppFind "drupal"
   - cmd: drupal about
   - cmd: drupal site:install standard --langcode="en" --db-type="sqlsrv" --db-host="localhost\SQL2017" --db-name="mydrupalsite" --db-user="sa" --db-pass="Password12!" --db-port="1433" --site-name="SQL Server Drupal Site" --site-mail="admin@example.com" --account-name="admin" --account-mail="admin@example.com" --account-pass="admin" --no-interaction
   - cmd: cd /d C:\projects\drupal-project
