--- a/appveyor.yml
+++ b/appveyor.yml
@@ -82,9 +82,9 @@ install:
   - cmd: git apply patch.patch --directory=web
   - cmd: cd /d C:\projects\drupal-project\web
   - cmd: drupal module:install simpletest
-  - ps: wget http://www.mysite.com/"
+  - ps: wget http://sqlsrv.drupal.org/"
 test_script:
   - cmd: cd /d C:\projects\drupal-project
   - cmd: mkdir c:\testresults\
-  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://www.mysite.com/" --xml c:\testresults\ "Common" --class Drupal\sqlsrv\Tests\SchemaTest
-  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://www.mysite.com/" --xml c:\testresults\ "Common" --class Drupal\sqlsrv\Tests\SelectQueryTest
+  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml c:\testresults\ "Common" --class Drupal\sqlsrv\Tests\SchemaTest
+  - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml c:\testresults\ "Common" --class Drupal\sqlsrv\Tests\SelectQueryTest
