--- a/appveyor.yml
+++ b/appveyor.yml
@@ -85,9 +85,10 @@ install:
       }
   - cmd: drupal site:install standard --langcode="en" --db-type="sqlsrv" --db-host="localhost\SQL2017" --db-name="mydrupalsite" --db-user="sa" --db-pass="Password12!" --db-port="1433" --site-name="SQL Server Drupal Site" --site-mail="admin@example.com" --account-name="admin" --account-mail="admin@example.com" --account-pass="admin" --no-interaction
   - cmd: cd /d C:\projects\drupal-project
-  - ps: (New-Object Net.WebClient).DownloadFile('https://www.drupal.org/files/issues/use_the_php_binary-2748883-15.patch','%cd%\patch.patch')
+  - ps: $Env:CWD = (Get-Location).path;
+  - ps: (New-Object Net.WebClient).DownloadFile('https://www.drupal.org/files/issues/use_the_php_binary-2748883-15.patch','$Env:CWD\patch.patch')
   - cmd: git apply patch.patch --directory=web
-  - ps: (New-Object Net.WebClient).DownloadFile('https://www.drupal.org/files/issues/simpletest_is_broken_on-2605284-107.patch','%cd%\patch.patch') 
+  - ps: (New-Object Net.WebClient).DownloadFile('https://www.drupal.org/files/issues/simpletest_is_broken_on-2605284-107.patch','$Env:CWD\patch.patch') 
   - cmd: git apply patch.patch --directory=web
   - cmd: cd /d C:\projects\drupal-project\web
   - cmd: drupal module:install simpletest
