--- a/sqlsrv.info.yml
+++ b/sqlsrv.info.yml
@@ -4,4 +4,4 @@ description: 'Driver for SQL Server and SQL Azure'
 package: Database engines
 required: true
 # version: VERSION
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8
