--- a/chef/chef.yml
+++ b/chef/chef.yml
@@ -18,12 +18,14 @@ deployers:
   php:
     type: 'php'
     runtime:
-      - {type: 'dl', uri: 'http://windows.php.net/downloads/releases/archives/php-7.1.30-nts-Win32-VC14-x64.zip', maps: {'*' : 'php/'}}
-      - {type: 'dl', uri: 'http://windows.php.net/downloads/pecl/releases/xdebug/2.5.3/php_xdebug-2.5.3-7.1-nts-vc14-x64.zip', maps: {'php_xdebug.dll':'php/ext/php_xdebug.dll'}}
-      - {type: 'dl', uri: 'http://windows.php.net/downloads/pecl/releases/igbinary/2.0.1/php_igbinary-2.0.1-7.1-nts-vc14-x64.zip', maps: {'php_igbinary.dll': 'php/ext/php_igbinary.dll'}}
-      - {type: 'dl', uri: 'http://windows.php.net/downloads/pecl/releases/couchbase/2.3.2/php_couchbase-2.3.2-7.1-nts-vc14-x64.zip', maps: {'php_couchbase.dll':'php/ext/php_couchbase.dll', 'libcouchbase.dll':'php/libcouchbase.dll'}}
-      - {type: 'dl', uri: 'https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/5.6.1/php_pdo_sqlsrv-5.6.1-7.1-nts-vc14-x64.zip', maps: {'php_pdo_sqlsrv.dll': 'php/ext/php_pdo_sqlsrv.dll'}}
+      - {type: 'dl', uri: 'https://windows.php.net/downloads/releases/archives/php-7.4.7-nts-Win32-vc15-x64.zip', maps: {'*' : 'php/'}}
+      - {type: 'dl', uri: 'https://windows.php.net/downloads/pecl/releases/xdebug/2.9.6/php_xdebug-2.9.6-7.4-nts-vc15-x64.zip', maps: {'php_xdebug.dll':'php/ext/php_xdebug.dll'}}
+      - {type: 'dl', uri: 'https://windows.php.net/downloads/pecl/releases/igbinary/3.1.2/php_igbinary-3.1.2-7.4-nts-vc15-x64.zip', maps: {'php_igbinary.dll': 'php/ext/php_igbinary.dll'}}
+      - {type: 'dl', uri: 'https://windows.php.net/downloads/pecl/releases/couchbase/2.6.2/php_couchbase-2.6.2-7.4-nts-vc15-x64.zip', maps: {'php_couchbase.dll':'php/ext/php_couchbase.dll', 'libcouchbase.dll':'php/libcouchbase.dll'}}
+      - {type: 'dl', uri: 'https://windows.php.net/downloads/pecl/releases/pdo_sqlsrv/5.8.1/php_pdo_sqlsrv-5.8.1-7.4-nts-vc15-x64.zip', maps: {'php_pdo_sqlsrv.dll': 'php/ext/php_pdo_sqlsrv.dll'}}
       - {type: 'dl', uri: 'http://windows.php.net/downloads/pecl/releases/wincache/2.0.0.8/php_wincache-2.0.0.8-7.1-nts-vc14-x64.zip', maps: {'php_wincache.dll': 'php/ext/php_wincache.dll'}}
+      - {type: 'dl', uri: 'file://phpbin/php_wincache.zip', maps: {'php_wincache.dll': 'php/ext/php_wincache.dll'}}
+      - {type: 'dl', uri: 'file://phpbin/php_blackfire.zip', maps: {'php_wincache.dll': 'php/ext/php_blackfire.dll'}}
  # CERTIFICATES
       - {type: 'dl', uri: 'http://curl.haxx.se/ca/cacert.pem', maps: {'cacert.pem': '/cacert.pem'}}
       - {type: 'file', 'action':'copy', 'source':'php/php.ini-production', 'destination':'php/php.ini'}
@@ -49,7 +51,8 @@ deployers:
       - {type: 'ini', multivalue: true, 'key':extension, 'value':php_igbinary.dll}
       - {type: 'ini', multivalue: true, 'key':extension, 'value':php_couchbase.dll}
       - {type: 'ini', multivalue: true, 'key':extension, 'value':php_com_dotnet.dll}
-      - {type: 'ini', multivalue: true, 'key':extension, 'value':php_openssl.dll}
+      - {type: 'ini', multivalue: true, 'key':extension, 'value':php_blackfire.dll}
+      - {type: 'ini', multivalue: true, 'key':zend_extension, 'value':php_xdebug.dll}
       - {type: 'ini', multivalue: true, 'key':zend_extension, 'value':php_opcache.dll}
       - {type: 'ini', 'key':disable_functions, 'value':'passthru,show_source'}
  # SQLSERVER
@@ -124,5 +127,5 @@ services:
   cron:
     type: 'scheduler'
     command: '& ".\drupal" "cron:execute"'
-    frequency: 5
+    frequency: 2
 
