--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,7 @@ install:
   - ps: choco install urlrewrite -y --no-progress 2>&1 > C:\TestLogs\choco_install_urlrewrite.txt
   - ps: choco install OpenSSL.Light -y --no-progress 2>&1 > C:\TestLogs\choco_install_openssl.txt
   - ps: choco install sqlserver-odbcdriver -y --no-progress 2>&1 > C:\TestLogs\choco_install_sqlserver-odbcdriver.txt
+  - ps: Install-Module PsIni
   - ps: | 
       $WorkingDir = Convert-Path .
       $ZipPath = Join-Path $WorkingDir '\chef_cmdlet.zip'
@@ -37,15 +38,19 @@ install:
   - ps: (New-Object Net.WebClient).DownloadFile('http://curl.haxx.se/ca/cacert.pem', 'C:\tools\php74\cacert.pem')
   - ps: new-item c:\composer -itemtype directory
   - ps: $Env:Path = "C:\tools\php74;" + $Env:Path;
-  - ps: Add-Content C:\tools\php74\php.ini "extension_dir=ext `n"
-  - ps: Add-Content C:\tools\php74\php.ini "extension=php_openssl.dll `n"
-  - ps: Add-Content C:\tools\php74\php.ini "extension=php_mbstring.dll `n"
-  - ps: Add-Content C:\tools\php74\php.ini "extension=php_curl.dll `n"
-  - ps: Add-Content C:\tools\php74\php.ini "extension=php_gd2.dll `n"
-  - ps: Add-Content C:\tools\php74\php.ini "curl.cainfo=C:\tools\php74\cacert.pem `n"
-  - ps: Add-Content C:\tools\php74\php.ini "openssl.cafile=C:\tools\php74\cacert.pem `n"
+  - ps: |
+      Set-ExecutionPolicy Bypass
+      Import-Module PsIni
+      $ini = Get-IniContent C:\tools\php74\php.ini;
+      $ini["extension_dir"] = "ext"; 
+      $ini["extension"] = @("php_openssl.dll", "php_mbstring.dll", "php_curl.dll", "php_gd2.dll"); 
+      $ini["curl.cainfo"] = "C:\tools\php74\cacert.pem";
+      $ini["openssl.cafile"] = "C:\tools\php74\cacert.pem";
+      $ini["memory_limit"] = "2048MB";
+      $ini | Out-IniFile -FilePath C:\tools\php74\php.ini;
   - cmd: cd /d C:\composer
   - cmd: choco install composer -y --no-progress
+  - ps: Add-Content C:\ProgramData\ComposerSetup\bin\composer.bat ""
   - ps: refreshenv
   - cmd: SET PATH=C:\ProgramData\ComposerSetup\bin;%PATH%
   - ps: |
