--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,21 +8,18 @@ hosts:
   www.mydrupalsite.com: 127.0.0.1
 image:
   - Visual Studio 2019
-environment:
-  GITLABUSERNAME:
-    secure: N0zbef6BtZd0jLNUUub7Dg==
-  GITLABPASSWORD:
-    secure: DwrgA4XLxZEcUXSZnnsAJg==
 install:
+  - ps: $Env:TestLogDir = "$Env:BuildDir\TestLogs";
+  - cmd: mkdir %TestLogDir%
+  - ps: Start-Transcript -path "$Env:BuildDir\console.txt" -append
   - ps: $Env:APPVEYOR_REPO_COMMIT_MESSAGE_FULL = "$env:APPVEYOR_REPO_COMMIT_MESSAGE $env:APPVEYOR_REPO_COMMIT_MESSAGE_EXTENDED".TrimEnd();
-  - cmd: mkdir c:\testlogs
   - ps: Start-Service 'MSSQL$SQL2017' | out-null
   - ps: Set-Service 'SQLAgent$SQL2017' -StartupType Manual | out-null
   - ps: Start-Service W3SVC | out-null
-  - ps: choco install php -y --no-progress 2>&1 > C:\TestLogs\choco_install_php.txt
-  - ps: choco install urlrewrite -y --no-progress 2>&1 > C:\TestLogs\choco_install_urlrewrite.txt
-  - ps: choco install OpenSSL.Light -y --no-progress 2>&1 > C:\TestLogs\choco_install_openssl.txt
-  - ps: choco install sqlserver-odbcdriver -y --no-progress 2>&1 > C:\TestLogs\choco_install_sqlserver-odbcdriver.txt
+  - ps: choco install php -y --no-progress 2>&1 > "$Env:TestLogDir\choco_install_php.txt"
+  - ps: choco install urlrewrite -y --no-progress 2>&1 > "$Env:TestLogDir\choco_install_urlrewrite.txt"
+  - ps: choco install OpenSSL.Light -y --no-progress 2>&1 > "$Env:TestLogDir\choco_install_openssl.txt"
+  - ps: choco install sqlserver-odbcdriver -y --no-progress 2>&1 > "$Env:TestLogDir\choco_install_sqlserver-odbcdriver.txt"
   - ps: Install-Module PsIni
   - ps: | 
       $WorkingDir = Convert-Path .
@@ -107,3 +104,15 @@ test_script:
   - cmd: echo Tests not run because they need to be updated as they are using deprecated implementations
   # - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml c:\testresults\ "Common" --class Drupal\sqlsrv\Tests\SchemaTest
   # - cmd: php web/core/scripts/run-tests.sh --php php --verbose --url "http://sqlsrv.drupal.org/" --xml c:\testresults\ "Common" --class Drupal\sqlsrv\Tests\SelectQueryTest
+on_finish:
+  - ps: echo "on_finish start";
+  - ps: Stop-Transcript
+  - cmd: echo Build Version %APPVEYOR_BUILD_VERSION%
+  # Add the chocolatey logs
+  - cmd: mkdir %TestLogDir%\ChocolateyLogs
+  - cmd: xcopy C:\ProgramData\chocolatey\logs %TestLogDir%\ChocolateyLogs /e /q & exit 0
+  # Add the npm-cache logs
+  - cmd: mkdir %TestLogDir%\npm-cache-logs
+  - cmd: xcopy %APPDATA%\npm-cache\_logs %TestLogDir%\npm-cache-logs /s /q & exit 0
+  # Push the test logs
+  - ps: Push-AppveyorArtifact "$Env:BuildDir\TestLogs.zip" -FileName "TestLogs.zip"
